--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jeshore Board.edu</title>
+    <!-- css style -->
+    <link rel="stylesheet" href="style/style.css">
+    <!-- css freamwork bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
+    <header>
+        <!-- navber section start -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid my-4">
+              <a class="navbar-brand fs-2 fw-bold mx-5" href="#">Jeshore Board</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav first-01">
+                  <a class="nav-link active fs-5 fw-bold mx-3" aria-current="page" href="#">Home</a>
+                  <a class="nav-link fs-5 fw-bold mx-3" href="#">Courses</a>
+                  <a class="nav-link fs-5 fw-bold mx-3" href="#">Deals</a>
+                  <a class="nav-link fs-5 fw-bold mx-3" href="#">Success</a>
+                  <a class="nav-link fs-5 fw-bold mx-3" href="#">About</a>
+                  <button type="button" class="btn btn-outline-primary border border-primary border-2">Register</button>
+                </div>
+              </div>
+            </div>
+          </nav>
+        <!-- navber section end -->
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
