--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <!-- navber section start -->
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid my-4">
+            <div class="container my-4">
               <a class="navbar-brand fs-2 fw-bold mx-5" href="#">Jeshore Board</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,6 +31,39 @@
             </div>
           </nav>
         <!-- navber section end -->
+
+        <!-- sliding part start -->
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption mb-lg-5 mb-md-1 mb-sm-0">
+                      <h1 class=" fs-lg-1 fs-sm-4 fs-md-3 mb-lg-5">Get Started Digital Learning</h1>
+                      <p class="mb-lg-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                      <button type="button" class="btn bg-primary text-light px-lg-4 py-lg-2 fw-lg-bold fs-lg-5 mb-lg-5">Get Started</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption mb-lg-5 mb-md-1 mb-sm-0">
+                        <h1 class="fs-lg-1 fs-sm-5 fs-md-3 mb-lg-5 mb-md-3 mb-sm-0">The most effective learning method in online learning</h1>
+                        <p class="lg-mb-5">Lecture is perhaps the most prevalent instructional strategy used in higher education—on campus and online.</p>
+                        <button type="button" class="btn bg-primary text-light px-lg-4 py-lg-2 fw-lg-bold fs-lg-5 mb-lg-5 mb-md-1 mb-sm-0">Get Started</button>
+                      </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+        <!-- sliding part end -->
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
