card part added

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <!-- navber section end -->
 
         <!-- sliding part start -->
-        <section class="container">
+        <section class="container pb-5">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption mb-lg-5 mb-md-1 mb-sm-0">
                       <h1 class=" fs-lg-1 fs-sm-4 fs-md-3 mb-lg-5">Get Started Digital Learning</h1>
-                      <p class="mb-lg-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                      <button type="button" class="btn bg-primary text-light px-lg-4 py-lg-2 fw-lg-bold fs-lg-5 mb-lg-5">Get Started</button>
+                      <p class="mb-lg-5">Just as they would in a classroom, many online professors use lectures to transmit information, promote comprehension, and spark students' interests.</p>
+                      <button type="button" class="btn bg-primary text-light px-lg-4 py-lg-2 mb-lg-5 mb-md-1 mb-sm-0">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -49,7 +49,7 @@
                     <div class="carousel-caption mb-lg-5 mb-md-1 mb-sm-0">
                         <h1 class="fs-lg-1 fs-sm-5 fs-md-3 mb-lg-5 mb-md-3 mb-sm-0">The most effective learning method in online learning</h1>
                         <p class="lg-mb-5">Lecture is perhaps the most prevalent instructional strategy used in higher education—on campus and online.</p>
-                        <button type="button" class="btn bg-primary text-light px-lg-4 py-lg-2 fw-lg-bold fs-lg-5 mb-lg-5 mb-md-1 mb-sm-0">Get Started</button>
+                        <button type="button" class="btn bg-primary text-light px-lg-4 py-lg-2 mb-lg-5 mb-md-1 mb-sm-0">Get Started</button>
                       </div>
                   </div>
                 </div>
@@ -65,6 +65,101 @@
         </section>
         <!-- sliding part end -->
     </header>
+    <main>
+        <section class="container">
+            <div class="text-center mb-5"><h1 class="fw-bold">Discover Our Popular Courses</h1>
+                <p>Along these lines, it comprehends what courses can be viewed as a strong wager,<br> particularly in case youre not very sure what to choose.</p></div>
+                <div class="row justify-content-around">
+                    <div class="card mb-3 col col-lg-6 col-md-12 col-sm-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-sm-12 col-md-4">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-sm-12 col-md-8">
+                            <div class="card-body">
+                              <h4 class="card-title">Fundamental Of UI/UX</h4>
+                              <p class="card-text">The five main principles of UX design. There are many important principles </p>
+                              <span class="fw-bold text-primary">Price:-$20</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card mb-3 col col-lg-6 col-md-12 col-sm-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h4 class="card-title">Fullstack Web Development</h4>
+                              <p class="card-text">A full stack web developer is a person who can develop both client and</p>
+                              <span class="fw-bold text-primary">Price:-$20</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card mb-3 col col-lg-6 col-md-12 col-sm-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h4 class="card-title">Javascript Basic to advanced</h4>
+                              <p class="card-text">JavaScript is the programming language of the Web. JavaScript is easy to learn.</p>
+                              <span class="fw-bold text-primary">Price:-$20</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card mb-3 col col-lg-6 col-md-12 col-sm-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h4 class="card-title">Digital Marketing</h4>
+                              <p class="card-text">Digital marketing, also called online marketing, is the promotion of brands</p>
+                              <span class="fw-bold text-primary">Price:-$20</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card mb-3 col col-lg-6 col-md-12 col-sm-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h4 class="card-title">Photography Basic Rules</h4>
+                              <p class="card-text">If your shot is in danger of losing impact due to a busy background</p>
+                              <span class="fw-bold text-primary">Price:-$20</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card mb-3 col col-lg-6 col-md-12 col-sm-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h4 class="card-title">Motion Graphics</h4>
+                              <p class="card-text">Motion graphics (sometimes mograph) are pieces of animation or digital</p>
+                              <span class="fw-bold text-primary">Price:-$20</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn bg-primary text-light px-4 py-2 fw-bold my-5">View All</button>
+                </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
