modal part added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <!-- sliding part end -->
     </header>
     <main>
+        <!-- card part start  -->
         <section class="container">
             <div class="text-center mb-5"><h1 class="fw-bold">Discover Our Popular Courses</h1>
                 <p>Along these lines, it comprehends what courses can be viewed as a strong wager,<br> particularly in case youre not very sure what to choose.</p></div>
@@ -159,6 +160,47 @@
                     <button type="button" class="btn bg-primary text-light px-4 py-2 fw-bold my-5">View All</button>
                 </div>
         </section>
+        <!-- card part end  -->
+        
+        <!-- register part start -->
+        <section class="container bg-primary mb-5 modal01">
+            <div class="d-lg-flex justify-content-around align-items-center modal02">
+                <div class="text-light">
+                    <h1>Ready to join?</h1>
+                    <p>Start, switch, or advance your career with more than 5,000 courses,<br> Professional Certificates, and degrees from world-class universities and companies.</p>
+                </div>
+                <div>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-light fw-bold text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Register Now
+                    </button>
+  
+                    <!-- Modal -->
+                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                         <h5 class="modal-title" id="exampleModalLabel">
+                            Please Submit Your Identity</h5>
+                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                     <div class="modal-body">
+                        <input class="form-control form-control-lg" type="text" placeholder="Youe Name" aria-label=".form-control-lg example">
+                        <input class="form-control form-control-lg my-4" type="email" placeholder="Youe Email" aria-label=".form-control-lg example">
+                        <input class="form-control form-control-lg" type="password" placeholder="Your Password" aria-label="default input example">
+                        
+                     </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sign In</button>
+                        <button type="button" class="btn btn-primary">Sign Up</button>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- register part end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
