--- a/index.html
+++ b/index.html
@@ -263,7 +263,21 @@
         </section>
         <!-- question part end -->
 
-        
+        <!-- trustsed part start -->
+        <section class="container d-sm-none d-sm-none d-lg-block">
+            <div class="text-center">
+                <h1 class="fw-bold">Trusted by over 800+ companies</h1>
+            </div>
+            <div class="d-lg-flex justify-content-around mb-5">
+                <img class="p-4" src="images/company/company-1.png" alt="">
+                <img class="p-4" src="images/company/company-2.png" alt="">
+                <img class="p-4" src="images/company/company-3.png" alt="">
+                <img class="p-4" src="images/company/company-4.png" alt="">
+                <img class="p-4" src="images/company/company-5.png" alt="">
+                <img class="p-4" src="images/company/company-6.png" alt="">
+            </div>
+        </section>
+        <!-- trustsed part end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
