--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style/style.css">
     <!-- css freamwork bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- font awesome keet -->
+    <script src="https://kit.fontawesome.com/af4dd53199.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -280,5 +282,21 @@
         <!-- trustsed part end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+    <!-- footer part start -->
+    <footer class="last1">
+        <div class="text-center p-5">
+            <h1 class="text-light">Jessore Board</h1>
+            <p class="text-light">Office 41, Zawaya Buildin, Ghala Muscat,<br> Sultanate of Oman <br> Privacy Ploicy | Terms of use</p>
+        </div>
+        <div class="text-center text-light">
+            <i class="fa-brands fa-square-facebook px-2"></i>
+            <i class="fa-brands fa-instagram px-2"></i>
+            <i class="fa-brands fa-tiktok px-2"></i>
+            <i class="fa-brands fa-twitter px-2"></i>
+            <i class="fa-brands fa-linkedin px-2"></i>
+        </div>
+    </footer>
+    <!-- footer part end -->
   </body>
 </html>
